:sparkles: feat(model): add country_numeric as a feature for AI prediction model
Added the country_numeric feature (label encoding of the country column) to the prediction model and integrated it across all affected files to ensure consistency.

--- a/notebooks/003_model_evaluation.ipynb
+++ b/notebooks/003_model_evaluation.ipynb
@@ -2,33 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os,sys\n",
+    "import os, sys\n",
     "from sklearn.metrics import r2_score\n",
-    "sys.path.append(os.path.abspath(os.path.join('..', 'utils'))\n",
+    "sys.path.append(os.path.abspath(os.path.join('..', 'utils')))\n",
     "from db_postgres import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-11-12 17:03:56,903 - INFO - Connected to PostgreSQL\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-11-12 17:03:56,916 - INFO - Data fetched successfully\n"
+      "2024-11-14 13:21:12,713 - INFO - ✔ Connected to PostgreSQL\n",
+      "2024-11-14 13:21:12,720 - INFO - ✔ Data fetched successfully\n"
      ]
     },
     {
@@ -58,6 +52,7 @@
        "      <th>freedom</th>\n",
        "      <th>perceptions_corruption</th>\n",
        "      <th>continent_numeric</th>\n",
+       "      <th>country_numeric</th>\n",
        "      <th>happiness_prediction</th>\n",
        "      <th>happiness_score</th>\n",
        "    </tr>\n",
@@ -66,93 +61,176 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>1.233748</td>\n",
-       "      <td>0.706156</td>\n",
-       "      <td>0.550027</td>\n",
-       "      <td>0.070984</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6.260365</td>\n",
-       "      <td>6.452</td>\n",
+       "      <td>0.26800</td>\n",
+       "      <td>0.24200</td>\n",
+       "      <td>0.30900</td>\n",
+       "      <td>0.04500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>121</td>\n",
+       "      <td>4.122400</td>\n",
+       "      <td>4.374</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>0.474000</td>\n",
-       "      <td>0.598000</td>\n",
-       "      <td>0.292000</td>\n",
-       "      <td>0.034000</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4.980093</td>\n",
-       "      <td>5.199</td>\n",
+       "      <td>1.03437</td>\n",
+       "      <td>0.64580</td>\n",
+       "      <td>0.15718</td>\n",
+       "      <td>0.04339</td>\n",
+       "      <td>3</td>\n",
+       "      <td>120</td>\n",
+       "      <td>4.806415</td>\n",
+       "      <td>5.177</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>1.217560</td>\n",
-       "      <td>0.719217</td>\n",
-       "      <td>0.579392</td>\n",
-       "      <td>0.178062</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6.182717</td>\n",
-       "      <td>6.454</td>\n",
+       "      <td>1.48800</td>\n",
+       "      <td>1.02800</td>\n",
+       "      <td>0.60300</td>\n",
+       "      <td>0.34100</td>\n",
+       "      <td>3</td>\n",
+       "      <td>42</td>\n",
+       "      <td>7.381862</td>\n",
+       "      <td>7.554</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>1.268000</td>\n",
-       "      <td>0.876000</td>\n",
-       "      <td>0.669000</td>\n",
-       "      <td>0.389000</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6.183863</td>\n",
-       "      <td>7.324</td>\n",
+       "      <td>0.75100</td>\n",
+       "      <td>0.50800</td>\n",
+       "      <td>0.60600</td>\n",
+       "      <td>0.05400</td>\n",
+       "      <td>1</td>\n",
+       "      <td>59</td>\n",
+       "      <td>6.012668</td>\n",
+       "      <td>5.752</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>1.529000</td>\n",
-       "      <td>1.008000</td>\n",
-       "      <td>0.631000</td>\n",
-       "      <td>0.457000</td>\n",
+       "      <td>1.42539</td>\n",
+       "      <td>0.81959</td>\n",
+       "      <td>0.51354</td>\n",
+       "      <td>0.26248</td>\n",
+       "      <td>3</td>\n",
+       "      <td>35</td>\n",
+       "      <td>6.525726</td>\n",
+       "      <td>6.929</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>0.77600</td>\n",
+       "      <td>0.70600</td>\n",
+       "      <td>0.51100</td>\n",
+       "      <td>0.06400</td>\n",
+       "      <td>1</td>\n",
+       "      <td>59</td>\n",
+       "      <td>5.836145</td>\n",
+       "      <td>5.779</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>1.47400</td>\n",
+       "      <td>0.67500</td>\n",
+       "      <td>0.55400</td>\n",
+       "      <td>0.10600</td>\n",
+       "      <td>2</td>\n",
+       "      <td>146</td>\n",
+       "      <td>6.311697</td>\n",
+       "      <td>6.083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1.48953</td>\n",
+       "      <td>0.59267</td>\n",
+       "      <td>0.37904</td>\n",
+       "      <td>0.30008</td>\n",
+       "      <td>2</td>\n",
+       "      <td>43</td>\n",
+       "      <td>6.295608</td>\n",
+       "      <td>6.379</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>1.26800</td>\n",
+       "      <td>0.87600</td>\n",
+       "      <td>0.66900</td>\n",
+       "      <td>0.38900</td>\n",
        "      <td>4</td>\n",
-       "      <td>6.491257</td>\n",
-       "      <td>6.343</td>\n",
+       "      <td>54</td>\n",
+       "      <td>7.226254</td>\n",
+       "      <td>7.324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.37800</td>\n",
+       "      <td>0.24000</td>\n",
+       "      <td>0.44000</td>\n",
+       "      <td>0.06700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>68</td>\n",
+       "      <td>3.693239</td>\n",
+       "      <td>4.141</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id  gdp_per_capita  life_expectancy   freedom  perceptions_corruption  \\\n",
-       "0   1        1.233748         0.706156  0.550027                0.070984   \n",
-       "1   2        0.474000         0.598000  0.292000                0.034000   \n",
-       "2   3        1.217560         0.719217  0.579392                0.178062   \n",
-       "3   4        1.268000         0.876000  0.669000                0.389000   \n",
-       "4   5        1.529000         1.008000  0.631000                0.457000   \n",
+       "   id  gdp_per_capita  life_expectancy  freedom  perceptions_corruption  \\\n",
+       "0   1         0.26800          0.24200  0.30900                 0.04500   \n",
+       "1   2         1.03437          0.64580  0.15718                 0.04339   \n",
+       "2   3         1.48800          1.02800  0.60300                 0.34100   \n",
+       "3   4         0.75100          0.50800  0.60600                 0.05400   \n",
+       "4   5         1.42539          0.81959  0.51354                 0.26248   \n",
+       "5   6         0.77600          0.70600  0.51100                 0.06400   \n",
+       "6   7         1.47400          0.67500  0.55400                 0.10600   \n",
+       "7   8         1.48953          0.59267  0.37904                 0.30008   \n",
+       "8   9         1.26800          0.87600  0.66900                 0.38900   \n",
+       "9  10         0.37800          0.24000  0.44000                 0.06700   \n",
        "\n",
-       "   continent_numeric  happiness_prediction  happiness_score  \n",
-       "0                  1              6.260365            6.452  \n",
-       "1                  4              4.980093            5.199  \n",
-       "2                  1              6.182717            6.454  \n",
-       "3                  3              6.183863            7.324  \n",
-       "4                  4              6.491257            6.343  "
+       "   continent_numeric  country_numeric  happiness_prediction  happiness_score  \n",
+       "0                  0              121              4.122400            4.374  \n",
+       "1                  3              120              4.806415            5.177  \n",
+       "2                  3               42              7.381862            7.554  \n",
+       "3                  1               59              6.012668            5.752  \n",
+       "4                  3               35              6.525726            6.929  \n",
+       "5                  1               59              5.836145            5.779  \n",
+       "6                  2              146              6.311697            6.083  \n",
+       "7                  2               43              6.295608            6.379  \n",
+       "8                  4               54              7.226254            7.324  \n",
+       "9                  0               68              3.693239            4.141  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_all_data = get_all_data()\n",
-    "df_all_data.head()\n"
+    "df_all_data.head(10)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The coef of determination, (R^2) is: 0.9082376071081864\n"
+     ]
+    }
+   ],
    "source": [
     "# Extract the true and predicted values\n",
     "y_true = df_all_data['happiness_score']\n",
@@ -160,7 +238,7 @@
     "\n",
     "# Calculate the R^2 score\n",
     "r2 = r2_score(y_true, y_pred)\n",
-    "print(f\"The coefficient of determination (R²) is: {r2}\")"
+    "print(f\"The coef of determination, (R^2) is: {r2}\")"
    ]
   }
  ],
