--- a/notebooks/002_feature_engineering.ipynb
+++ b/notebooks/002_feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "4    Africa                  0                0  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,10 +265,46 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error on test set: 0.16668625590499198\n",
+      "R^2 Score on test set: 0.8712907813442723\n",
+      "Average R^2 Score from cross-validation: 0.8385767045873902\n"
+     ]
+    }
+   ],
    "source": [
-    "Model training code omitted"
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from xgboost import XGBRegressor\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "# Creating an instance of the model\n",
+    "xgboost_model = XGBRegressor(random_state=42, n_estimators=12, learning_rate=0.3)\n",
+    "\n",
+    "# Train the model with cross-validation\n",
+    "cv_scores = cross_val_score(xgboost_model, X_train, y_train, cv=5, scoring='r2')\n",
+    "\n",
+    "xgboost_model.fit(X_train, y_train)\n",
+    "\n",
+    "# get predictions\n",
+    "y_pred = xgboost_model.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(\"Mean Squared Error on test set:\", mse)\n",
+    "print(\"R^2 Score on test set:\", r2)\n",
+    "print(\"Average R^2 Score from cross-validation:\", np.mean(cv_scores))"
    ]
   },
   {
